# sharesticky

./: .gitignore  PROJECT_BRIEF.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  vd-probe.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: desktop.rs  desktop_menu.rs  mod.rs  sharing.rs  sticky.rs
src-tauri/src/platform/: availability.rs  desktop_id.rs  linux.rs  macos.rs  mod.rs  placement.rs  probe.rs  virtual_desktops.rs  windows.rs
src-tauri/src/storage/: database.rs  encryption.rs  mod.rs
src-tauri/src/sync/: lan.rs  mod.rs  transport.rs  yrs_manager.rs
src/lib/: desktop-visibility.test.ts  desktop-visibility.ts  session.test.ts  session.ts  sticky-sync.test.ts  sticky-sync.ts  tauri-bridge.test.ts  tauri-bridge.ts
src/manager/: ManagerWindow.tsx  ShareDialog.tsx
src/sticky/: StickyDragHandle.tsx  StickyEditor.tsx  StickyToolbar.tsx  StickyWindow.tsx
src/store/: settings.ts  stickies.test.ts  stickies.ts
src/styles/: manager.css  sticky.css  themes.css
src/sync/: webrtc-sync.ts  yjs-provider.ts
src/test/: setup.ts
